--- a/Flask/templates/05_index.html
+++ b/Flask/templates/05_index.html
@@ -6,6 +6,22 @@
 </head>
 <body>
     <header><h1>Hello Jii</h1></header>
-    <main>Welcome to my journey to learn Flask frameworks.</main>
+    <main>
+        <h2>Welcome to my journey to learn Flask frameworks.</h2><br><br>
+    </main>
+
+    <form method="POST" action="/submit">
+        <label for="Science">Science:</label>
+        <input type="text" name="Science"><br><br>
+    
+        <label for="Maths">Maths:</label>
+        <input type="text" name="Maths"><br><br>
+    
+        <label for="Data_Science">Data Science:</label>
+        <input type="text" name="Data_Science"><br><br>
+    
+        <input type="submit" value="Submit">
+    </form>
+    
 </body>
 </html>
